Corrections d'alignement et d'ombrage pour la soutenance
- Ajout de l'ombre sur le menu blanc contenant le logo Ohmyfood
- Ajustement du logo Ohmyfood pour qu'il déborde sur le bloc gris contenant Paris Belleville
- Alignement à gauche du titre fonctionnement en format mobile
- Ajout de marges à gauche et à droite dans le bloc restaurant au format tablette sur la page d'accueil
- Ajout d'une marge en haut du titre restaurants aux formats tablette et desktop

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ img {
 .header {
   height: 60px;
   width: 100%;
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.591);
+  box-shadow: inset 0 -10px 10px -12px rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -130,7 +130,7 @@ img {
   height: 50px;
   background-color: #EAEAEA;
   background: var(--Grey-2, #EAEAEA);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   font-size: 16px;
   display: flex;
   justify-content: center;
@@ -179,23 +179,22 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3.125rem 1.25rem;
+  padding: 50px 20px;
 }
 @media screen and (min-width: 767px) {
   .main__workflow {
-    padding: 3.125rem 0;
+    padding: 50px 20px 50px 20px;
     align-items: flex-start;
   }
 }
 @media screen and (min-width: 1023px) {
   .main__workflow {
-    padding: 3.125rem 0;
+    padding: 50px 20px;
   }
 }
 .main__workflow__title {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-  text-align: center;
+  font-size: 24px;
+  margin-bottom: 24px;
 }
 @media screen and (min-width: 767px) {
   .main__workflow__title {
@@ -277,20 +276,21 @@ img {
 .restaurant-section {
   padding: 54px 18px 68px 18px;
   background-color: #F6F6F6;
+  margin-top: 30px;
 }
 @media screen and (min-width: 767px) {
   .restaurant-section {
-    padding: 0 0 30px 0;
+    padding: 0 20px 30px 20px;
   }
 }
 @media screen and (min-width: 1023px) {
   .restaurant-section {
-    padding: 0 0 30px 0;
+    padding: 0 20px 30px 20px;
   }
 }
 .restaurant-section__heading {
-  font-size: 2rem;
-  margin: 0 0 1.5rem 0;
+  font-size: 24px;
+  margin: 0 0 24px 0;
 }
 .restaurant-section__items {
   display: grid; /* Changed from flex to grid */
