--- a/sass/Layout/_main.scss
+++ b/sass/Layout/_main.scss
@@ -27,7 +27,7 @@
         height: 50px;
         background-color: #EAEAEA;
         background: var(--Grey-2, #EAEAEA);
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
         font-size:16px;
         @include flex-center;
             p::before
@@ -77,25 +77,25 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: px2rem(50) px2rem(20);
+	padding: 50px 20px;
 	// margin-top: 48px;
 
 	@media screen and (min-width: $breakpoint-tablet) 
 	{
-		padding: px2rem(50) 0;
+		padding: 50px 20px 50px 20px ;
 		align-items: flex-start;
 	}
 
 	@media screen and (min-width: $breakpoint-desktop) 
 	{
-		padding: px2rem(50) 0;
+		padding: 50px 20px;
 	}
 
 	&__title 
 	{
-		font-size: 2rem;
-		margin-bottom: 1.5rem;
-		text-align: center;
+		font-size: 24px;
+		margin-bottom: 24px;
+		// text-align: center;
 
 		@media screen and (min-width: $breakpoint-tablet) 
 		{
@@ -214,20 +214,21 @@
     padding: 54px 18px 68px 18px;
         // margin-bottom: px2rem(68);
     background-color: $color-bg-grey;
+    margin-top:30px;
 
     @media screen and (min-width: $breakpoint-tablet) {
         // margin-bottom: px2rem(30);
-        padding: 0 0 30px 0;
+        padding: 0 20px 30px 20px;
     }
     @media screen and (min-width: $breakpoint-desktop) {
         // margin-bottom: px2rem(30);
-        padding: 0 0 30px 0;
+        padding: 0 20px 30px 20px;
     }
 
 
     &__heading {
-        font-size: 2rem;
-        margin: 0 0 1.5rem 0;
+        font-size: 24px;
+        margin: 0 0 24px 0;
     }
 
     &__items {
